RESULTS/AutoSpec/raw_results/out-4o-oopsla-mx/out/45_0009/45_merged.txt
/home/dimpling/AutoSpec/out/45_0009/45_merged.c:44:3: error: unterminated comment
   44 |   /* Nested while loop invariants */;
      |   ^
